--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@types/google-spreadsheet": "3.0.2",
     "@types/react-places-autocomplete": "7.2.6",
     "argon2": "0.27.0",
-    "clsx": "1.1.1",
     "classnames": "^2.2.6",
+    "clsx": "1.1.1",
     "cookie": "0.4.1",
     "csrf": "3.1.0",
     "dotenv": "8.2.0",
@@ -33,7 +33,8 @@
     "postgresql": "0.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "reakit": "^1.3.2"
+    "reakit": "^1.3.2",
+    "use-media": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "14.14.13",
