--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "8.2.0",
     "dotenv-cli": "4.0.0",
     "google-spreadsheet": "3.0.14",
+    "hamburger-react": "^2.4.0",
     "ley": "0.6.0",
     "next": "10.0.3",
     "next-cookies": "2.0.3",
